fixed navbar text width on iphone to remove horizontal scroll

--- a/source/static/main.css
+++ b/source/static/main.css
@@ -954,11 +954,27 @@ blockquote p {
 .navbar-brand span {
 	font-size:2rem;
 	line-height:1.2;
-
 	display:inline-block;
 	vertical-align:middle;
 	padding:0 0 0 15px;
 }
+
+@media (max-width: 760px) {
+	.navbar-brand span {
+		font-size:1.4rem;
+		line-height:1.2;
+		display:inline-block;
+		vertical-align:middle;
+		padding:0 0 0 15px;
+	}
+
+	.navbar-brand b {
+		display:block;
+		font-size:75%;
+		line-height:1;
+	}
+}
+
 .navbar-brand b {
 	display:block;
 	font-size:50%;
